part5/504/manifests/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: course-exercises
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html
      - name: sidecar
        image: usermine12/dvopskube-504-sidecar
        volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html
      volumes:
      - name: shared-data
        emptyDir: {}
