part5/504/manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: course-exercises
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 80
